--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "test"
   },
   "scripts": {
-    "test": "false"
+    "start": "node -e 'app = require(./lib/app); app.start()'",
+    "test": "node ./node_modules/mocha/bin/mocha"
   },
   "author": "",
   "license": "MIT",
